# Generated by Django 6.0.5 on 2026-05-21 11:25

import api.models
import datetime
import django.contrib.auth.models
import django.contrib.auth.validators
import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='ClinicSettings',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('work_start_time', models.TimeField(default=datetime.time(9, 0), verbose_name='Çalışma Başlangıç')),
                ('work_end_time', models.TimeField(default=datetime.time(18, 0), verbose_name='Çalışma Bitiş')),
                ('work_days', models.JSONField(blank=True, default=list, help_text='Örn: 1,2,3,4,5,6 (1=Pzt, 0=Paz)', verbose_name='Çalışılabilecek Günler')),
            ],
            options={
                'verbose_name': 'Klinik Ayarı',
                'verbose_name_plural': 'Klinik Ayarları',
            },
        ),
        migrations.CreateModel(
            name='Patient',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('first_name', models.CharField(max_length=100, verbose_name='Ad')),
                ('last_name', models.CharField(max_length=100, verbose_name='Soyad')),
                ('phone', models.CharField(max_length=20, verbose_name='Telefon')),
                ('tckn', models.CharField(blank=True, max_length=11, verbose_name='TC Kimlik No')),
                ('birth_date', models.DateField(blank=True, null=True, verbose_name='Doğum Tarihi')),
                ('address', models.TextField(blank=True, verbose_name='Adres')),
                ('notes', models.TextField(blank=True, verbose_name='Notlar')),
                ('is_active', models.BooleanField(default=True, verbose_name='Aktif')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Hasta',
                'verbose_name_plural': 'Hastalar',
                'ordering': ['last_name', 'first_name'],
            },
        ),
        migrations.CreateModel(
            name='CustomUser',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('role', models.CharField(choices=[('admin', 'Yönetici'), ('doctor', 'Hekim'), ('assistant', 'Asistan')], default='assistant', max_length=20)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'Kullanıcı',
                'verbose_name_plural': 'Kullanıcılar',
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='AuditLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('action', models.CharField(choices=[('create', 'Oluşturma'), ('update', 'Güncelleme'), ('delete', 'Silme'), ('soft_delete', 'Devre Dışı')], max_length=20)),
                ('model_name', models.CharField(max_length=100)),
                ('object_id', models.IntegerField()),
                ('object_repr', models.CharField(max_length=255)),
                ('changes', models.JSONField(blank=True, default=dict)),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('user', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Audit Log',
                'verbose_name_plural': 'Audit Loglar',
                'ordering': ['-timestamp'],
            },
        ),
        migrations.CreateModel(
            name='Document',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=255, verbose_name='Doküman Adı')),
                ('file', models.FileField(upload_to=api.models.patient_directory_path, verbose_name='Dosya')),
                ('is_active', models.BooleanField(default=True, verbose_name='Aktif')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('uploaded_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
                ('patient', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='documents', to='api.patient')),
            ],
            options={
                'verbose_name': 'Doküman',
                'verbose_name_plural': 'Dokümanlar',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Anamnesis',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('medical_history', models.TextField(blank=True, verbose_name='Tıbbi Geçmiş')),
                ('allergies', models.TextField(blank=True, verbose_name='Alerjiler')),
                ('medications', models.TextField(blank=True, verbose_name='Kullandığı İlaçlar')),
                ('chronic_diseases', models.TextField(blank=True, verbose_name='Kronik Hastalıklar')),
                ('surgical_history', models.TextField(blank=True, verbose_name='Geçirdiği Ameliyatlar')),
                ('family_history', models.TextField(blank=True, verbose_name='Aile Öyküsü')),
                ('smoking', models.CharField(blank=True, max_length=100, verbose_name='Sigara')),
                ('alcohol', models.CharField(blank=True, max_length=100, verbose_name='Alkol')),
                ('pregnancy_status', models.CharField(blank=True, max_length=100, verbose_name='Gebelik Durumu')),
                ('other_notes', models.TextField(blank=True, verbose_name='Diğer Notlar')),
                ('patient', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='anamnesis', to='api.patient')),
            ],
            options={
                'verbose_name': 'Anamnez',
                'verbose_name_plural': 'Anamnezler',
            },
        ),
        migrations.CreateModel(
            name='Treatment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('treatment_name', models.CharField(blank=True, max_length=200, verbose_name='İşlem Adı')),
                ('tooth_number', models.CharField(blank=True, max_length=10, verbose_name='Diş No (FDI)')),
                ('status', models.CharField(choices=[('planned', 'Yapılacak'), ('completed', 'Tamamlanmış')], default='completed', max_length=20)),
                ('notes', models.TextField(blank=True, verbose_name='Notlar')),
                ('date', models.DateField(verbose_name='Tarih')),
                ('price', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='Uygulanan Fiyat')),
                ('is_active', models.BooleanField(default=True, verbose_name='Aktif')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('doctor', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='treatments', to=settings.AUTH_USER_MODEL)),
                ('patient', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='treatments', to='api.patient')),
            ],
            options={
                'verbose_name': 'Tedavi',
                'verbose_name_plural': 'Tedaviler',
                'ordering': ['-date', '-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Payment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('amount', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='Tutar')),
                ('description', models.CharField(blank=True, max_length=255, verbose_name='Açıklama')),
                ('payment_date', models.DateField(verbose_name='Ödeme Tarihi')),
                ('is_active', models.BooleanField(default=True, verbose_name='Aktif')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('patient', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='payments', to='api.patient')),
                ('treatment', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='payments', to='api.treatment')),
            ],
            options={
                'verbose_name': 'Ödeme',
                'verbose_name_plural': 'Ödemeler',
                'ordering': ['-payment_date'],
            },
        ),
        migrations.CreateModel(
            name='TreatmentType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, verbose_name='Tedavi Türü')),
                ('category', models.CharField(choices=[('filling', 'Dolgu'), ('canal', 'Kanal Tedavisi'), ('crown', 'Kron / Kaplama'), ('extraction', 'Diş Çekimi'), ('implant', 'İmplant'), ('detartraj', 'Diş Taşı Temizliği'), ('other', 'Diğer')], default='other', max_length=20, verbose_name='Kategori')),
                ('default_price', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='Varsayılan Fiyat')),
                ('is_active', models.BooleanField(default=True, verbose_name='Aktif')),
                ('doctor', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='treatment_types', to=settings.AUTH_USER_MODEL, verbose_name='Hekim')),
            ],
            options={
                'verbose_name': 'Tedavi Türü',
                'verbose_name_plural': 'Tedavi Türleri',
                'ordering': ['name'],
            },
        ),
        migrations.AddField(
            model_name='treatment',
            name='treatment_type',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='treatments', to='api.treatmenttype'),
        ),
        migrations.CreateModel(
            name='Appointment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.DateField(verbose_name='Tarih')),
                ('time', models.TimeField(verbose_name='Saat')),
                ('status', models.CharField(choices=[('scheduled', 'Planlandı'), ('completed', 'Tamamlandı'), ('cancelled', 'İptal'), ('no_show', 'Gelmedi')], default='scheduled', max_length=20)),
                ('notes', models.TextField(blank=True, verbose_name='Notlar')),
                ('is_active', models.BooleanField(default=True, verbose_name='Aktif')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('doctor', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='appointments', to=settings.AUTH_USER_MODEL)),
                ('patient', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='appointments', to='api.patient')),
                ('treatment_type', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='appointments', to='api.treatmenttype', verbose_name='İşlem Türü')),
            ],
            options={
                'verbose_name': 'Randevu',
                'verbose_name_plural': 'Randevular',
                'ordering': ['date', 'time'],
            },
        ),
    ]
